--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "module": "NodeNext",
     "rootDir": "./src",
     "outDir": "./dist",
-    "strict": true,
     "esModuleInterop": true,
-    "types": ["worker-configuration.d.ts", "node"]
+    "types": ["./worker-configuration.d.ts", "node"],
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["worker-configuration.d.ts"]
 }
