--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "scripts": {
     "build": "tsc",
     "start": "nodemon dist/index.js",
-    "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts"
+    "dev": "wrangler dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
-    "@types/body-parser": "^1.19.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "drizzle-kit": "^0.31.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@hono/node-server": "^1.14.4",
     "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
+    "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
     "jsonwebtoken": "^9.0.2",
     "swagger-jsdoc": "^6.2.8",
