--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 main = "./src/index.ts"
 name = "deepsink-server"
 compatibility_flags = [ "nodejs_compat" ]
-compatibility_date = "2025-06-17"
+compatibility_date = "2025-06-04"
 workers_dev = true
 #cloudflare_api_key = "K5ZCS3O57SgJTCCFI9H6sKVlSeys2O81e_wFXfK7“
 
@@ -9,6 +9,10 @@ workers_dev = true
 binding = "DB"
 database_name = "deep_sink"
 database_id = "6da38cbb-f76a-427c-b402-f6f5232ce138"
+migrations_dir = "drizzle"
 
 [observability.logs]
 enabled = true
+
+[dev]
+port = 3000
