--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "drizzle-orm": "^0.44.2",
     "hono": "^4.8.2",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^5.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
