--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "wrangler": "^4.23.0"
+    "wrangler": "^4.24.0"
   },
   "dependencies": {
     "@hono/node-server": "^1.15.0",
     "bcryptjs": "^3.0.2",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.8.4",
     "jsonwebtoken": "^9.0.2",
